# SimPilot

./: .gitignore  .swiftlint.yml  CHANGELOG.md  CLAUDE.md  LICENSE  Package.swift  README.md
.github/workflows/: ci.yml  release.yml
.plans/simpilot/: 00-master-plan.md  01-phase-driver-layer.md  02-phase-core-engine.md  03-phase-consumer-layer.md  04-phase-plugins-reporting.md  05-phase-distribution.md
Examples/: ExamplePlugin.swift  auth-flow.yaml  mcp-config.json
Formula/: simpilot.rb
Sources/SimPilotCLI/: CLI.swift
Sources/SimPilotCLI/Commands/: AppCommand.swift  AssertCommand.swift  DevicesCommand.swift  LocationCommand.swift  MCPCommand.swift  PermissionCommand.swift  PushCommand.swift  RunCommand.swift  ScreenshotCommand.swift  SwipeCommand.swift  TapCommand.swift  TreeCommand.swift  TypeCommand.swift  URLCommand.swift  VersionCommand.swift  WaitCommand.swift
Sources/SimPilotCLI/Helpers/: AccessibilityCheck.swift  CLIOutput.swift  CLISimctlDriver.swift
Sources/SimPilotCLI/MCP/: MCPServer.swift
Tests/IntegrationTests/: FullFlowIntegrationTests.swift  PlaceholderIntegrationTests.swift
Tests/SimPilotCoreTests/: HTMLReporterTests.swift  JUnitReporterTests.swift  PermissionDriverTests.swift  PlaceholderTests.swift  PluginTests.swift  ScreenshotDiffTests.swift  ScreenshotManagerTests.swift  TraceRecorderTests.swift
docs/: ci-cd.md  element-resolution.md  plugins.md  reporting.md  troubleshooting.md  yaml-flows.md
python-sdk/: README.md  pyproject.toml
python-sdk/src/simpilot/: __init__.py
python-sdk/tests/: test_simpilot.py
(+53 files in other folders)
